examples/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
spec:
  containers:
    - name: curl-pod
      image: curlimages/curl:latest
      command:
        - sh
        - -c
        - while true; do sleep 1; done
