examples/secret-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-volume-pod
spec:
  Volumes:
  - name: secret-volume
    secret:
      secretName: simple-secret
  containers:
  - name: secret-volume-container
    image: redis:latest
    volumeMounts:
      - name: secret-volume
        mountPath: /etc/secret-volume
        readOnly: true
