examples/simple-nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-nginx
spec:
  containers:
    - image: nginx
      name: nginx
      imagePullPolicy: Always
      ports:
      - containerPort: 80
        protocol: TCP
