examples/demo-deployment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-deployment
  labels:
    app: demo-deployment
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: demo-deployment
