examples/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-replicaset
  labels:
    app: demo-replicaset
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: demo-replicaset
