examples/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: prod
  name: prod-ingress
spec:
  podSelector: {}
  ingress:
  - from:
      - podSelector: {}
